{
  "version": 4,
  "terraform_version": "1.5.4",
  "serial": 20,
  "lineage": "49fc5ce9-8c45-53ea-79d5-d6b35f6cea0e",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:935838525253:vpc/vpc-c330c9a8",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-e437cc8f",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-438f5d28",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-c330c9a8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-4fe56424",
            "owner_id": "935838525253"
          }
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:935838525253:loadbalancer/app/test-e6mF0U/69b0043acd3e782a",
            "arn_suffix": "app/test-e6mF0U/69b0043acd3e782a",
            "desync_mitigation_mode": "defensive",
            "dns_name": "test-e6mF0U-1697521979.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:935838525253:loadbalancer/app/test-e6mF0U/69b0043acd3e782a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-e6mF0U",
            "security_groups": [
              "sg-0d88d202a29f2fee7"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-4cf37500"
              },
              {
                "subnet_id": "subnet-601eff0b"
              },
              {
                "subnet_id": "subnet-6ff6a915"
              }
            ],
            "subnets": [
              "subnet-4cf37500",
              "subnet-601eff0b",
              "subnet-6ff6a915"
            ],
            "vpc_id": "vpc-c330c9a8",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "data.aws_subnets.default",
            "module.alb.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:935838525253:listener/app/test-e6mF0U/69b0043acd3e782a/d2095f51922eddd2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "404: page not found",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:935838525253:listener/app/test-e6mF0U/69b0043acd3e782a/d2095f51922eddd2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:935838525253:loadbalancer/app/test-e6mF0U/69b0043acd3e782a",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_subnets.default",
            "module.alb.aws_lb.example",
            "module.alb.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:935838525253:security-group/sg-0d88d202a29f2fee7",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0d88d202a29f2fee7",
            "ingress": [],
            "name": "test-e6mF0U",
            "name_prefix": "",
            "owner_id": "935838525253",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-c330c9a8"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_all_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3495423365",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0d88d202a29f2fee7",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-437342020",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d88d202a29f2fee7",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.alb"
          ]
        }
      ]
    }
  ]
}